bug fix: main_container overflow: hidden removed

--- a/src/containers/TotalExpense/style.module.css
+++ b/src/containers/TotalExpense/style.module.css
@@ -1,5 +1,5 @@
 .label {
-  /* font-weight: bold; */
+  font-weight: bold;
   font-size: 20px;
 }
 
