--- a/src/style.module.css
+++ b/src/style.module.css
@@ -7,7 +7,6 @@
   display: flex;
   flex-direction: column;
   padding: 15px;
-  overflow-y: hidden;
 }
 
 .header {
@@ -31,13 +30,13 @@
   align-items: center;
   justify-content: center;
 }
+
 .expense_list {
   flex: 8;
   align-self: center;
   margin-top: 20px;
-  overflow-y: hidden;
 }
 
 .expense_total {
-  margin-top: 25px;
+  margin-top: 30px;
 }
